fix(FileDetailsLabel): Fix obvious hover problem on dark mode
This is a temporary fix before I migrate to Kayla's work so we don't show something terribad in a demo.

--- a/packages/module/src/FileDetailsLabel/FileDetailsLabel.scss
+++ b/packages/module/src/FileDetailsLabel/FileDetailsLabel.scss
@@ -6,17 +6,19 @@
 
 .pf-v6-c-label.pf-chatbot__file-label {
   --pf-v6-c-label--BackgroundColor: rgba(255, 255, 255, 1);
-  --pf-t--global--color--nonstatus--gray--default: rgba(255, 255, 255, 1);
   --pf-v6-c-label--BorderRadius: var(--pf-t--global--border--radius--small);
+
+  .pf-chatbot__file-label > .pf-v6-c-label__content {
+    --pf-v6-c-label--Color: rgba(255, 255, 255, 1);
+  }
 }
 
 .pf-v6-theme-dark {
   .pf-v6-c-label.pf-chatbot__file-label {
     --pf-v6-c-label--BackgroundColor: rgba(41, 41, 41, 1);
-    --pf-t--global--color--nonstatus--gray--default: rgba(112, 112, 112, 1);
-  }
-  .pf-chatbot__file-label > .pf-v6-c-label__content {
+    --pf-v6-c-label--m-clickable--hover--BackgroundColor: rgba(41, 41, 41, 1);
     --pf-v6-c-label--Color: rgba(255, 255, 255, 1);
+    --pf-v6-c-label--m-clickable--hover--Color: rgba(255, 255, 255, 1);
   }
 
   .pf-chatbot__file-label > .pf-v6-c-label__actions > .pf-v6-c-button.pf-m-plain > .pf-v6-c-button__icon {
